--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Demo</title>
+  <title>Five Star Rating</title>
   <meta name="description" content="">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.min.css">
@@ -18,29 +18,15 @@
     <a href="#" class="o-header-nav__link">Back To Article <i class="fa fa-star"></i></a>
   </nav>
   <div class="o-container">
-    <h1 class="o-header__title">Lorem Ipsum This Is The Title</h1>
+    <h1 class="o-header__title">Five Star Rating</h1>
   </div>
 </header>
 
 <main class="o-content">
   <div class="o-container">
-
     <div class="o-section">
-      <nav class="o-sub-nav">
-        <ul class="o-sub-nav__items">
-          <li class="o-sub-nav__item"><a href="#" class="o-sub-nav__link">Item 1</a></li>
-          <li class="o-sub-nav__item"><a href="#" class="o-sub-nav__link">Item 2</a></li>
-          <li class="o-sub-nav__item"><a href="#" class="o-sub-nav__link">Item 3</a></li>
-          <li class="o-sub-nav__item"><a href="#" class="o-sub-nav__link">Item 4</a></li>
-          <li class="o-sub-nav__item"><a href="#" class="o-sub-nav__link">Item 5</a></li>
-        </ul>
-      </nav>
+      <div id="shop"></div>
     </div>
-
-    <div class="o-section">
-      component
-    </div>
-
     <div class="o-section">
       <div id="github-icons"></div>
     </div>
@@ -53,9 +39,13 @@
   </div>
 </footer>
 
+<script src="js/lib/underscore-min.js"></script>
+<script src="js/src/rating.js"></script>
+<script src="js/src/main.js"></script>
+
 <!-- EXTERNAL SCRIPTS FOR CALLMENICK.COM, PLEASE DO NOT INCLUDE -->
-<script src="js/dist/githubIcons.js"></script>
-<script src="js/dist/carbonAd.js"></script>
+<script src="js/lib/githubIcons.js"></script>
+<script src="js/lib/carbonAd.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
