(fix) adds description meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Five Star Rating</title>
-  <meta name="description" content="">
+  <meta name="description" content="Five star rating component built with JavaScript and CSS, and packaged as a bower component.">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/rating.min.css">
